# ai-animal-classifier

./: .gitignore  App.py  README.md  main.py  pyproject.toml
PROJECT-DOCUMENTATION/: DEEP_LEARNING_GUIDE.md  PROJECT_BLUEPRINT.md  PROJECT_TIMELINE.md
core/: __init__.py  history.py  model.py  prediction.py  preprocess.py  sidebar.py  utils.py
pages/: 01_Dashboard_Page.py  02_Live_Prediction_Page.py  05_Prediction_History_Page.py  06_Model_Details_Page.py  09_About_Page.py  10_Old_App.py
prediction-model/: aaa-model-details.csv  model-details.json
scripts/: binary-model-gen-script.py  categorical-model-gen-script.py  new_animal_classifier_model_script.py  preprocess_images.py  script_utils.py
scripts/exploration-notebook/: ModelCreationNotebook.ipynb  model-gen-script.py
