[project]
name = "ai-animal-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "streamlit>=1.52.1",
    "streamlit-local-storage>=0.0.25",
    "tensorflow>=2.20.0",
]
